--- a/style.css
+++ b/style.css
@@ -80,12 +80,16 @@ top: 50%;
 left: 0;
 z-index: 1;
 transform: translateY(-50%);
+
+animation: slide-back 0.2s;
 }
 
 .light #switch button {
-right: 0;
-left: initial;
+  animation: slide-in 0.2s forwards;
+}
 
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -168,7 +172,7 @@ footer {
 }
 
 /* media queries */
-@media (min-width: 700px) {
+@media (min-width: 1100px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
@@ -176,4 +180,23 @@ footer {
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+to {
+  left: 0;
+}
 }
